fix horizontal overflow

--- a/UI/static/styles/main.css
+++ b/UI/static/styles/main.css
@@ -12,6 +12,8 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     min-width: 350px;
+    overflow:auto;
+    overflow-x:hidden;
 }
 
 /*navigation bar*/
@@ -271,42 +273,44 @@ input[type="password"] {
 
 /*Ride */
 .ride {
-    height: 520px;
-    padding: 5px;
+    height: 500px;
     box-sizing: border-box;
     margin: auto;
     width: 100%;
     border: 4px solid #008000;
     background-color: #7fffd4;
     color: #000000;
+    padding: 5px;
 }
 
 .ride-details{
   max-width: 410px;  
-  height: 500px;
-  padding: 2px;
+  height: 480px;
+  padding: 4px;
   left: 30px;
   box-sizing: border-box;
   margin: auto;
   width: 80%;
-  border: 5px solid #008000;
+  border: 3px solid #008000;
   color: #000000;
   border-radius: 20px;
 }
 
+.ride-details p{
+    margin-left: 15px;
+    margin-top: 12px;
+    margin-bottom: 12px;
+}
 #ride-img {
     margin: auto;
     border-radius: 25px;
     background-position: left top;
     background-repeat: repeat;
-    padding: 5px;
+    padding: 3px;
     width: 235px;
     height: 150px;
 }
 
-.ride {
-    padding: 16;
-}
 .ride-head h2{
     padding: 20px;
 }
@@ -314,12 +318,12 @@ input[type="password"] {
 .ride input[type="submit"] {
     border: none;
     outline: none;
-    height: 40px;
+    height: 30px;
     background: #008080;
     color: #ffffff;
     font-size: 18px;
     border-radius: 20px;
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
 /*profile*/
@@ -482,7 +486,6 @@ input[type="reset"] {
 
 .footer {
     position: fixed;
-    left: 0;
     bottom: 0;
     width: 100%;
     background-color: #0a0909;
@@ -497,7 +500,7 @@ footer {
     background-color: #333333;
     color: #fff;
     text-align: center;
-    height: 35px;
+    height: 48px;
 }
 
 footer p {
